
pywbem-0.8.4.dev0  2016-05-09

  BUG FIXES:

    * Fixed an IndexError in cim_http.wbem_request() that occurred during
      handling of another exception.

  ENHANCEMENTS:

    * Fixed description in INSTALL.md to correctly describe how to establish
      OS-level prerequisites.

    * Improved Swig installation code by reinstalling Swig if it was installed
      but still cannot be found in PATH (e.g. if the installation was tampered
      with).

    * Removed dependency on git (this was a leftover from when M2Crypto needed
      to be obtained from its development repo).

    * Added debug prints for two probably legitimate situations where socket
      errors are ignored when the server closes or resets the connection.
      These debug prints can be enabled via the `debug` instance variable
      of the WBEMConnection object; they are targeted at development for
      investigating these situations.

    * Added check for minimum Python version 3.4 when running on Python 3.
      That requirement was already documented, now it is also enforced in
      the code.


pywbem-0.8.3  2016-04-15

  BUG FIXES:

    * To address some M2Crypto issues, upgraded to use M2Crypto >=0.24 from
      PyPI.

    * For Windows, using M2CryptoWin32/64 >=0.21 from PyPI, in order to
      avoid the Swig-based build in Windows.

    * Improved the mechanism to build the LEX/YACC table modules, so that
      import errors for freshly installed packages (e.g. M2Crypto) no longer
      occur.

  ENHANCEMENTS:

    * Added Windows versions of WBEM utility commands: wbemcli.bat,
      mof_compiler.bat.


pywbem-0.8.2  2016-03-20

  BUG FIXES:

    * Eliminated dependency on "six" package during installation of pywbem.
      (Andreas Maier)

  DEPENDENCIES:

    * v0.8.x has the following dependencies on other PyPI packages
      (see 'install_requires' argument in setup script):
        - M2Crypto
        - ply
        - six
      

pywbem-0.8.1  2016-03-18

  KNOWN ISSUES:
